--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "maatwebsite/excel": "3.1.47"
+        "maatwebsite/excel": "3.1.47",
+        "mpdf/mpdf": "^8.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
